--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ openai
 packaging
 pandas
 pillow
-protobuf
+protobuf~=3.20.0
 pyarrow
 pydantic
 pydantic-core
@@ -27,7 +27,7 @@ python-dateutil
 python-dotenv
 regex
 requests
-streamlit
+streamlit==1.30.0
 streamlit-mermaid
 typing-extensions
 # Document processing dependencies
